k8s/deployment_past.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapi
  labels:
    app: nodejsapi
spec:
  replicas: 1   # three pod
  selector:
    matchLabels:
      app: nodejsapi
  template:
    metadata:
      labels:
        app: nodejsapi
    spec:
      containers:
        - name: nodejsapi
          image: raminicano/nodejsapi
          ports:
            - containerPort: 8500   # Container port(pod port)
