k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papertechtrend
  labels:
    app: papertechtrend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papertechtrend
  template:
    metadata:
      labels:
        app: papertechtrend
    spec:
      containers:
        - name: papertechtrend
          image: raminicano/ptt
          ports:
            - containerPort: 8000
            - containerPort: 8500
