k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  selector:
    app: nginx-proxy
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
