k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papertechtrend-service
  namespace: paper-space
spec:
  selector:
    app: papertechtrend
  ports:
    - name: port-8000
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30500
    - name: port-8500
      protocol: TCP
      port: 8500
      targetPort: 8500
      nodePort: 31000
  type: LoadBalancer
  externalIPs:
    - 54.180.154.36
