k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papertechtrend
  namespace: paper-space
  labels:
    app: papertechtrend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papertechtrend
  template:
    metadata:
      labels:
        app: papertechtrend
    spec:
      containers:
        - name: papertechtrend
          image: raminicano/papertechtrend
          ports:
            - containerPort: 8000
            - containerPort: 8500
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
  namespace: paper-space
spec:
  podSelector:
    matchLabels:
      app: papertechtrend
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 3306
